09/23/2008 David Teller <David.Teller@univ-orleans.fr>:
	* extArray.ml*: [ROArray] removed
	* extArray.ml*: [Cap] created
	* extArray.ml*: [make_compare] added
	
09/22/2008 David Teller <David.Teller@univ-orleans.fr>:
	* main/*.ml: merged into main/batteries.ml
	* main/_tags: added [pkg_threads]
	* myocamlbuild.ml: added [-I +threads] to [ocamldoc] in presence of [pkg_threads]

09/11/2008 David Teller <David.Teller@univ-orleans.fr>:
	* number.mli: merged module and submodule [Numeric]
	* number.mli: [( *. )] becomes [( * )], etc.
	* extNum.ml*: added
	* extBig_int.ml*: added
	* extInt.ml*, extInt32.ml*, extInt64.ml*, extNativeint.ml*: rewritten with new [Number]
	* extArray.ml*: [ROArray] added
	
09/10/2008 David Teller <David.Teller@univ-orleans.fr>:
	* layer_1/juice: moved out of [layer_1]
	* layer_1/*: moved to [main]
	* Makefile: [api.odocl] now doesn't insert [Batteries]
	* Makefile: removed references to [batteries_layer_1]
	* glue/misc: created
	* additions: created
	* additions/extlib: created
	* additions/misc: created
	
09/08/2008 David Teller <David.Teller@univ-orleans.fr>:
	* batlib_findlib.ml:    removed
	* batlib_persistent.ml: [Batlib_Extlib_PMap] added
	* batlib_mutable.ml:    [Batlib_Baselib_ArrayLabels] added
	* odoc_generator_batlib.ml: [root] become [roots] (and becomes a list)
	* odoc_generator_batlib.ml: [is_reachable_from_root] now a full method
	* odoc_generator_batlib.ml: [generate_modules_index] uses [is_reachable_from_root]
	* odoc_generator_batlib.ml: [html_of_Module_list] uses [is_reachable_from_root]
	* batlib_Extlib_Hashtbl.mli: added [S], [HashedType], [Make] 
	* batlib_Extlib_List.ml: added [make_compare], [of_backwards], [backwards], [drop_while], [take_while], 
	[split_at], [assoc_inv], [rindex_ofq], [rindex_of], [index_ofq], [index_of], [find_map], [find_exn], 
	[rev_map2], [@], [at], [cons], [is_empty]
	* batlib_Extlib_Hashtbl.mli: documented
	* batlib_Extlib_List.mli: documented