@@ -1,146 +1,0 @@
-enum
-lazyList
-extString
-extNum
-extNativeint
-unzip
-extInt64
-extComplex
-global
-dynArray
-extInt
-uTF8
-std
-install
-result
-enumLabels
-extInt32
-extList
-extChar
-pMap
-vect
-lazyListLabels
-extGenlex
-optParse
-dllist
-bitSet
-extBool
-refList
-extRandom
-extLib
-file
-extArray
-ref
-charParser
-parserCo
-extStream
-rope
-extHashtbl
-extFloat
-number
-option
-base64
-uChar
-IO
-extBig_int
-labels
-Batlib_languages
-batteries
-Batlib_toolchain
-Batlib_text
-Batlib_concurrency
-Batlib_data
-Batlib_numeric
-Batlib_meta
-Batlib_mutable
-Batlib_containers
-Batlib_util
-Batlib_network
-Batlib_logical
-Batlib_standard
-Batlib_system
-Batlib_threads
-Batlib_control
-Batlib_persistent
-Batlib_Baselib_Big_int
-Batlib_Baselib_Genlex
-Batlib_Baselib_HashtblLabels
-Batlib_Baselib_Set
-Batlib_Baselib_Unix
-Batlib_Baselib_SetLabels
-Batlib_Baselib_UnixLabels
-Batlib_Baselib_Scanf
-Batlib_Baselib_Event
-Batlib_Baselib_Digest
-Batlib_Baselib_Buffer
-Batlib_Baselib_ListLabels
-Batlib_Baselib_Condition
-Batlib_Baselib_Printexc
-Batlib_Baselib_Mutex
-Batlib_Baselib_Stack
-Batlib_Baselib_Printf
-Batlib_Baselib_Sys
-Batlib_Baselib_Format
-Batlib_Baselib_Int32
-Batlib_Baselib_Callback
-Batlib_Baselib_Thread
-Batlib_Baselib_Num
-Batlib_Baselib_ArrayLabels
-Batlib_Baselib_Int64
-Batlib_Baselib_Nativeint
-Batlib_Baselib_StringLabels
-Batlib_Baselib_Map
-Batlib_Baselib_Queue
-Batlib_Baselib_Obj
-Batlib_Baselib_Stream
-Batlib_Baselib_Char
-Batlib_Baselib_Arg
-Batlib_Baselib_Random
-Batlib_Baselib_CamlinternalMod
-Batlib_Baselib_Gc
-Batlib_Baselib_Bigarray
-Batlib_Baselib_Parsing
-Batlib_Baselib_Filename
-Batlib_Baselib_Oo
-Batlib_Baselib_Pervasives
-Batlib_Baselib_Complex
-Batlib_Baselib_CamlinternalOO
-Batlib_Baselib_MapLabels
-Batlib_Baselib_Lexing
-Batlib_Baselib_Marshal
-Batlib_Baselib_Weak
-Batlib_Baselib_Str
-Batlib_Baselib_Lazy
-Batlib_Ocamldoc_Odoc_info
-Batlib_Extlib_PMap
-Batlib_Extlib_Int64
-Batlib_Extlib_Complex
-Batlib_Extlib_OptParse
-Batlib_Extlib_String
-Batlib_Extlib_BitSet
-Batlib_Extlib_Enum
-Batlib_Extlib_RefList
-Batlib_Extlib_File
-Batlib_Extlib_Dllist
-Batlib_Extlib_Safeint
-Batlib_Extlib_Dynarray
-Batlib_Extlib_Immutable_array
-Batlib_Extlib_Int32
-Batlib_Extlib_Option
-Batlib_Extlib_Global
-Batlib_Extlib_Int
-Batlib_Extlib_Bool
-Batlib_Extlib_IO
-Batlib_Extlib_Big_int
-Batlib_Extlib_List
-Batlib_Extlib_Char
-Batlib_Extlib_Unzip
-Batlib_Extlib_Hashtbl
-Batlib_Extlib_Printf
-Batlib_Extlib_Base64
-Batlib_Extlib_Array
-Batlib_Extlib_Nativeint
-Batlib_Extlib_Num
-Batlib_Extlib_Std
-Batlib_Findlib_Findlib
-Batlib_Misc_Labels
