@@ -1,1 +1,1 @@
-<odoc*>: use_ocamldoc
+<odoc*>: debug,use_ocamldoc
