@@ -62,7 +62,9 @@ module BaseInt = struct
   external to_int : int -> int = "%identity"
 
 
-  let of_string = int_of_string
+  let of_string x = 
+    try int_of_string x
+    with Failure "int_of_string" -> raise (Invalid_argument "int_of_string")
   let to_string = string_of_int
 
   let enum = enum
